# tensile

./: CHANGELOG.md  README.md  cabal.project  cabal.project.freeze  gadt.hs  notes.md  packcheck.sh  stack.yaml  tensile.cabal  test.hs
.circleci/: config.yml
tensile/: Main.hs  Operators.md  linear.hs  main.hs  package.cabal  tensile.cabal  test.hs
tensile-dimensions/: package.cabal
tensile-dimensions/lib/src/Numeric/Tensile/: Dimensions.hs
tensile-dimensions/lib/src/Numeric/Tensile/Dimensions/: Dim.hs  Dims.hs  Idxs.hs  Perm.hs  Types.hs
tensile-dimensions/lib/src/Numeric/Tensile/Dimensions/Dim/: Types.hs
tensile-dimensions/lib/src/Numeric/Tensile/Dimensions/Dims/: Types.hs
tensile-dimensions/lib/src/Numeric/Tensile/Dimensions/Idx/: Types.hs
tensile-dimensions/lib/src/Numeric/Tensile/Dimensions/Idxs/: Types.hs
tensile-dimensions/lib/test/Test/Numeric/Tensile/Dimensions/: Gen.hs
tensile-dimensions/src/Numeric/Tensile/: Dimensions.hs
tensile-dimensions/src/Numeric/Tensile/Dimensions/: Class.hs  Dim.hs  Dims.hs  Idxs.hs  Index.hs  Perm.hs  Permutation.hs  Types.hs
tensile-dimensions/src/Numeric/Tensile/Dimensions/Dim/: Class.hs
tensile-dimensions/src/Numeric/Tensile/Dimensions/Dims/: Class.hs
tensile-dimensions/src/Numeric/Tensile/Dimensions/Idx/: Class.hs
tensile-dimensions/src/Numeric/Tensile/Dimensions/Idxs/: Class.hs
tensile-dimensions/src/Numeric/Tensile/Dimensions/Types/: List.hs
tensile-dimensions/test/: test.hs
tensile-dimensions/test/Test/Numeric/Tensile/Dimensions/Dims/: Property.hs
tensile-dimensions/test/Test/Numeric/Tensile/Dimensions/Idxs/: Property.hs
tensile-tensorflow/: package.cabal  stack.yaml  tensile-tensorflow.cabal
tensile-tensorflow/lib/src/Numeric/Tensile/: Operations.hs
tensile-tensorflow/lib/src/Numeric/Tensile/Operations/Linear/: Internal.hs
tensile-tensorflow/lib/src/Numeric/Tensile/Operations/Quantization/: Internal.hs
tensile-tensorflow/lib/src/Numeric/Tensile/Tensor/: Internal.hs
tensile-tensorflow/ref/src/Numeric/Tensile/Operations/Linear/: Internal.hs
tensile-tensorflow/ref/src/Numeric/Tensile/Tensor/: Internal.hs
tensile-tensorflow/test/Test/Numeric/Tensile/Dimensions/Index/: Property.hs
tensile-tensorflow/test/Test/Numeric/Tensile/Operations/Linear/: Property.hs
tensile-test/: Main.hs  package.cabal
tensile-test/lib/Data/: Tensor.hs
tensile-test/lib/Numeric/Tensile/Quantization/: Operations.hsig
tensile-test/sig/: Siggy.hsig
tensile-test/sig/Data/Tensor/: Types.hsig
tensile-test/sig/Numeric/Tensile/Quantization/: Operations.hsig
tensile-vector/: Main.hs  tensile-vector.cabal
tensile-vector/def/Data/Tensor/: Internal.hs
tensile-vector/def/Numeric/Tensile/: Quantization.hs
tensile-vector/def/Numeric/Tensile/Quantization/: Internal.hs
tensile-vector/def/Numeric/Tensile/Quantization/Internal/: Types.hs
tensile-vector/lib/Data/Tensor/Internal/: Types.hs
tensile-vector/lib/Numeric/: Tensile.hs
tensile-vector/sig/Numeric/Tensile/Quantization/: Internal.hsig
tensile-vector/sig/Numeric/Tensile/Quantization/Internal/: Types.hsig
tensile-vector/src/Data/Tensor/: Types.hs
tensile/Tensile/: Operator.hs
tensile/def/Data/Tensor/: Types.hs
tensile/lib/Data/: Tensor.hs
tensile/lib/Data/Tensor/Internal/: Types.hsig
tensile/lib/Numeric/Tensile/Linear/: Unlifted.hs
tensile/lib/Numeric/Tensile/Operations/Linear/: Lifted.hs  Unlifted.hs
tensile/lib/Numeric/Tensile/Operations/Manipulation/: Unlifted.hs
tensile/lib/src/Data/: Tensor.hs
tensile/lib/src/Numeric/Tensile/: Tensor.hs
tensile/lib/src/Numeric/Tensile/Operations/Linear/: Unlifted.hs
tensile/lib/test/Test/Data/Tensor/: Generators.hs  Generators.hsig
tensile/lib/test/Test/Data/Tensor/Generators/: Internal.hsig
tensile/lib/test/Test/Numeric/Tensile/Dimensions/: Gen.hs
tensile/lib/test/Test/Numeric/Tensile/Tensor/: Gen.hs
tensile/local/Numeric/Tensile/Operations/Quantization/: Internal.hsig
tensile/ref-old/Data/Tensor/: Types.hs
tensile/ref-old/Data/Tensor/Internal/: Array.hs
tensile/ref-old/Numeric/Tensile/Operations/Linear/: Internal.hs
tensile/ref-old/Numeric/Tensile/Operations/Quantization/: Internal.hs
tensile/ref/Data/Tensor/: Types.hs
tensile/ref/Data/Tensor/Internal/: Array.hs
tensile/ref/Numeric/Tensile/Operations/Linear/: Internal.hs
tensile/ref/Numeric/Tensile/Operations/Quantization/: Internal.hs
tensile/ref/Numeric/Tensile/Quantization/: Operations.hs
tensile/ref/src/Data/Tensor/: Internal.hs
tensile/ref/src/Numeric/Tensile/Operations/Linear/: Internal.hs
tensile/ref/src/Numeric/Tensile/Operations/Quantization/: Internal.hs
tensile/ref/src/Numeric/Tensile/Tensor/: Internal.hs
tensile/ref/test/Test/Data/Tensor/: Generators.hs
tensile/ref/test/Test/Data/Tensor/Generators/: Internal.hs
tensile/ref2/Data/Tensor/: Types.hs
tensile/ref2/Data/Tensor/Internal/: Array.hs
tensile/ref2/Numeric/Tensile/Operations/Linear/: Internal.hs
tensile/ref2/Numeric/Tensile/Operations/Quantization/: Internal.hs
tensile/sig/Data/Tensor/: Internal.hsig  Types.hsig
tensile/sig/Numeric/Tensile/Operations/Linear/: Internal.hsig
tensile/sig/Numeric/Tensile/Operations/Manipulation/: Internal.hsig
tensile/sig/Numeric/Tensile/Operations/Quantization/: Internal.hsig
tensile/sig/Numeric/Tensile/Quantization/: Operations.hsig
tensile/sig/Numeric/Tensile/Tensor/: Internal.hsig
tensile/src/Data/Tensor/: Types.hsig
tensile/src/Numeric/Tensile/: Tensor.hs
tensile/src/Numeric/Tensile/Tensor/: Types.hsig
tensile/tensile-test/def/Numeric/Tensile/Quantization/: Operations.hs
tensile/tensile-test/local/Numeric/Tensile/Quantization/: Operations.hsig
tensile/test/: test.hs
tensile/test/Data/: Tensor.hs
tensile/test/Data/Tensor/: Types.hs
tensile/test/Test/Numeric/Tensile/Dimensions/Idxs/: Property.hs
tensile/test/Test/Numeric/Tensile/Dimensions/Index/: Property.hs
tensile/test/Test/Numeric/Tensile/Tensor/: Property.hs
tensile/types/Numeric/Tensile/: Index.hs  Permutation.hs  Types.hs
tensile/types/src/Numeric/Tensile/: Index.hs  Permutation.hs  Types.hs
(+19 files in other folders)
