name:           tensile-dimensions
version:        0.0.1
synopsis:       A cross-platform library for deep learning.
description:    Tensile is a lightweight neural network API that uses backpack for ML framework integration.
category:       Machine Learning
homepage:       https://github.com/cmk/tensile#readme
bug-reports:    https://github.com/cmk/tensile/issues
maintainer:     Chris McKinlay
license:        BSD3
build-type:     Simple
cabal-version:  >= 2.0

source-repository head
  type: git
  location: https://github.com/cmk/tensile

library 
    hs-source-dirs: 
        src
    exposed-modules:
        Numeric.Tensile.Dimensions
        Numeric.Tensile.Dimensions.Dim
        Numeric.Tensile.Dimensions.Dim.Class
        Numeric.Tensile.Dimensions.Dims
        Numeric.Tensile.Dimensions.Dims.Class
        Numeric.Tensile.Dimensions.Index
        Numeric.Tensile.Dimensions.Permutation
        Numeric.Tensile.Dimensions.Types
    build-depends:
        base == 4.*,
        combinat,
        dimensions,
        finite-typelits,
        singletons
    default-extensions: 
        ConstraintKinds, 
        FlexibleContexts,
        RankNTypes,
        ScopedTypeVariables,
        TypeInType,
        TypeApplications,
        TypeFamilies,
        TypeOperators 
    default-language: Haskell2010
