name:           tensile-dimensions
version:        0.0.1
synopsis:       A cross-platform library for deep learning.
description:    Tensile is a lightweight neural network API that uses backpack for ML framework integration.
category:       Machine Learning
homepage:       https://github.com/cmk/tensile#readme
bug-reports:    https://github.com/cmk/tensile/issues
maintainer:     Chris McKinlay
license:        BSD3
build-type:     Simple
cabal-version:  >= 2.0

source-repository head
  type: git
  location: https://github.com/cmk/tensile

library 
    hs-source-dirs: 
        lib/src
        lib/test
    exposed-modules:
        Numeric.Tensile.Dimensions
        Numeric.Tensile.Dimensions.Dim
        Numeric.Tensile.Dimensions.Dim.Class
        Numeric.Tensile.Dimensions.Dims
        Numeric.Tensile.Dimensions.Dims.Class
        Numeric.Tensile.Dimensions.Idx.Class
        Numeric.Tensile.Dimensions.Idxs
        Numeric.Tensile.Dimensions.Idxs.Class
        Numeric.Tensile.Dimensions.Perm
        Numeric.Tensile.Dimensions.Types
        Test.Numeric.Tensile.Dimensions.Gen
        Test.Numeric.Tensile.Dimensions.Idxs.Predicate
    build-depends:
        base == 4.*,
        combinat,
        dimensions,
        finite-typelits,
        hedgehog,
        singletons
    default-extensions: 
        ConstraintKinds, 
        FlexibleContexts,
        RankNTypes,
        ScopedTypeVariables,
        TypeInType,
        TypeApplications,
        TypeFamilies,
        TypeOperators 
    default-language: Haskell2010
