name:           tensile-tensorflow
version:        0.0.1
synopsis:       A cross-platform library for deep learning.
description:    Tensile is a lightweight neural network API that uses backpack for ML framework integration.
category:       Machine Learning
homepage:       https://github.com/cmk/tensile#readme
bug-reports:    https://github.com/cmk/tensile/issues
maintainer:     Chris McKinlay
license:        BSD3
build-type:     Simple
cabal-version:  >= 2.0

source-repository head
  type: git
  location: https://github.com/cmk/tensile

library local-signatures
    hs-source-dirs: 
        local
    build-depends:
        base == 4.*,
        tensile-signatures == 0.0.*
    default-language: Haskell2010

library 
    hs-source-dirs: 
        lib/src
    exposed-modules:
        Numeric.Tensile.Tensor.Internal
        Numeric.Tensile.Operations.Linear.Internal     
        Numeric.Tensile.Operations.Quantization.Internal
    build-depends:
        base == 4.*,
        finite-typelits,
        tensile-dimensions == 0.0.*,
        vector,
        vector-sized
    default-extensions:
        AllowAmbiguousTypes,
        ConstraintKinds, 
        FlexibleContexts,
        RankNTypes,
        ScopedTypeVariables,
        TypeInType,
        TypeApplications,
        TypeFamilies,
        TypeOperators 
    default-language: Haskell2010

library tensile-tensorflow-test
    hs-source-dirs: 
        lib/test
    exposed-modules:
        Test.Numeric.Tensile.Tensor.Gen.Internal    
    build-depends:
        base == 4.*,
        hedgehog,
        tensile-dimensions == 0.0.*,
        tensile-tensorflow,
        vector
    default-extensions: 
        ScopedTypeVariables,
        TypeApplications,
        TypeInType,
        TypeOperators,
        OverloadedLists
    default-language: Haskell2010

test-suite test
    type:                
        exitcode-stdio-1.0
    hs-source-dirs: 
        test
    main-is:            
        test.hs
    other-modules:
        Test.Numeric.Tensile.Dimensions.Index.Property 
        Test.Numeric.Tensile.Operations.Linear.Property
    build-depends:       
        base == 4.*,
        hedgehog,
        tensile,
        tensile-dimensions == 0.0.*,
        tensile-tensorflow,
        tensile-tensorflow-test
    default-extensions:
        ScopedTypeVariables,
        TypeApplications,
        TypeInType,
        TypeOperators,
        OverloadedLists
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
