name:           tensile-tensorflow
version:        0.0.1
synopsis:       A cross-platform library for deep learning.
description:    Tensile is a lightweight neural network API that uses backpack for ML framework integration.
category:       Machine Learning
homepage:       https://github.com/cmk/tensile#readme
bug-reports:    https://github.com/cmk/tensile/issues
maintainer:     Chris McKinlay
license:        BSD3
build-type:     Simple
cabal-version:  >= 2.0

source-repository head
  type: git
  location: https://github.com/cmk/tensile

library
    hs-source-dirs: 
        ref/src
        ref/test
    exposed-modules:
        Numeric.Tensile.Tensor.Internal
        Numeric.Tensile.Operations.Linear.Internal     
        Numeric.Tensile.Operations.Quantization.Internal
        Test.Numeric.Tensile.Tensor.Gen.Internal 
    build-depends:
        base == 4.*,
        tensile-dimensions == 0.0.*,
        hedgehog,
        tensorflow,
        vector,
        vector-sized
    default-extensions:
        AllowAmbiguousTypes,
        ConstraintKinds, 
        FlexibleContexts,
        RankNTypes,
        ScopedTypeVariables,
        TypeInType,
        TypeApplications,
        TypeFamilies,
        TypeOperators 
    default-language: Haskell2010
