name: lesson4-signature-thinning
version: 1.0.0.0
cabal-version: >=2.0
build-type: Simple

executable main
    main-is: 
        Main.hs
    build-depends:
        base          >= 4 && < 5,
        def,
        foo,
        bar
    default-language: Haskell2010

library def
    hs-source-dirs: 
        def
    exposed-modules:
        Foo.Siggy
        Bar.Siggy
        Data.Tensor.Types
    build-depends:
        base          >= 4 && < 5,
        dimensions,
        singletons,
        vector
    default-language: Haskell2010
    default-extensions: ConstraintKinds DataKinds FlexibleContexts TypeApplications TypeFamilies ScopedTypeVariables OverloadedLists

library foo --tensile core
    hs-source-dirs: 
        foo
    signatures:
        Foo.Siggy
    exposed-modules:
        Foo
    build-depends:
        base          >= 4 && < 5,
        signatures
    mixins:
        signatures requires (Siggy as Foo.Siggy)
        --signatures requires (Data.Tensor.Signature as Data.Tensor.Internal)
    default-language: Haskell2010

library bar --thinning
    hs-source-dirs: 
        bar
    signatures:
        Bar.Siggy
    exposed-modules:
        Bar
    build-depends:
        base          >= 4 && < 5,
        signatures
    mixins:
        signatures requires (Siggy as Bar.Siggy)
        --signatures requires (Data.Tensor.Signature as Data.Tensor.Internal)
    default-language: Haskell2010

library signatures
    hs-source-dirs: 
        sig
    signatures:
        Siggy,
        Data.Tensor.Types
        --Numeric.Tensile.Quantization.Types
    build-depends:
        base          >= 4 && < 5,
        dimensions,
        singletons,
        vector
    default-language: Haskell2010
    default-extensions: ConstraintKinds DataKinds FlexibleContexts TypeApplications TypeFamilies ScopedTypeVariables
