name:           tensile-test
version:        0.0.1
synopsis:       A cross-platform library for deep learning.
description:    Tensile is a lightweight deep learning library that uses backpack to integrate with common machine learning frameworks such as TensorFlow, Torch, or ONNX.
category:       Machine Learning
homepage:       https://github.com/cmk/tensile#readme
bug-reports:    https://github.com/cmk/tensile/issues
maintainer:     Chris McKinlay
license:        BSD-3-Clause
build-type:     Simple
cabal-version:  >= 2.0

source-repository head
  type: git
  location: https://github.com/cmk/tensile

executable main
    main-is: 
        Main.hs
    build-depends:
        base          >= 4 && < 5,
        def,
        foo
        --bar
    default-language: Haskell2010

library def
    hs-source-dirs: 
        def
    exposed-modules:
        Foo.Siggy
        Bar.Siggy
        Data.Tensor.Types
        Numeric.Tensile.Quantization.Operations
    build-depends:
        base          >= 4 && < 5,
        dimensions,
        singletons,
        vector
    default-language: Haskell2010
    default-extensions: ConstraintKinds DataKinds FlexibleContexts TypeApplications TypeFamilies ScopedTypeVariables OverloadedLists

library foo
    hs-source-dirs: 
        foo
    signatures:
        Foo.Siggy
    exposed-modules:
        Foo
    build-depends:
        base          >= 4 && < 5,
        signatures
    mixins:
        signatures requires (Siggy as Foo.Siggy)
        -- signatures requires (Numeric.Tensile.Quantization.Operations as Numeric.Tensile.Quantization.Internal.Vector)
    default-language: Haskell2010
    --default-extensions: NoImplicitPrelude



library signatures
    hs-source-dirs: 
        sig
    signatures:
        Siggy,
        Data.Tensor.Types
        Numeric.Tensile.Quantization.Operations
    build-depends:
        base          >= 4 && < 5,
        dimensions,
        singletons,
        vector
    default-language: Haskell2010
    default-extensions: ConstraintKinds DataKinds FlexibleContexts TypeApplications TypeFamilies ScopedTypeVariables
