name:           tensile-vector
version:        0.0.1
synopsis:       A cross-platform library for deep learning.
description:    Tensile is a lightweight neural network API that uses backpack to integrate with common deep learning frameworks such as TensorFlow, Torch, or ONNX.
category:       Machine Learning
homepage:       https://github.com/cmk/tensile#readme
bug-reports:    https://github.com/cmk/tensile/issues
maintainer:     Chris McKinlay
license:        BSD-3-Clause
build-type:     Simple
cabal-version:  >= 2.0

source-repository head
  type: git
  location: https://github.com/cmk/tensile

library
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
  hs-source-dirs:
      lib
  exposed-modules:
    --, Numeric.Tensile.Quantization

      Numeric.Tensile
    --, Numeric.Tensile.Quantization.Lifted
  reexported-modules:  
      Data.Tensor
  build-depends:
      base >= 4.9 && < 5
    , dimensions
    , singletons
    , signatures
    , definitions
    , vector
    , tensile
  mixins:
      signatures requires (Numeric.Tensile.Quantization.Types as Numeric.Tensile.Quantization.Internal.Types)
   -- , tensile requires (Data.Tensor.Types as Data.Tensor.Internal.Types)
  default-language: Haskell2010
  default-extensions: ConstraintKinds DataKinds FlexibleContexts TypeApplications TypeFamilies ScopedTypeVariables OverloadedLists

library definitions
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
  hs-source-dirs:
      def
  exposed-modules:
    --, Numeric.Tensile.Quantization
      Data.Tensor.Internal.Types
    , Numeric.Tensile.Quantization.Internal.Types
    --, Numeric.Tensile.Quantization.Lifted
  reexported-modules:  
      Data.Tensor.Internal.Types as Data.Tensor.Types
    , Numeric.Tensile.Quantization.Internal.Types as Numeric.Tensile.Quantization.Types

  build-depends:
      base >= 4.9 && < 5
    , dimensions
    , singletons
    , vector
  default-language: Haskell2010
  default-extensions: ConstraintKinds DataKinds FlexibleContexts TypeApplications TypeFamilies ScopedTypeVariables OverloadedLists

library signatures
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
  hs-source-dirs:
      sig
  signatures:
      Numeric.Tensile.Quantization.Internal.Types
  build-depends:
      base >= 4.9 && < 5
    , tensile-signatures
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude

executable mnist
  main-is: 
      Main.hs
  build-depends:
      base >= 4.9 && < 5
    , tensile-vector
    , vector
  default-language: Haskell2010
  default-extensions: DataKinds ScopedTypeVariables OverloadedLists
