name:           tensile
version:        0.0.1
synopsis:       A cross-platform library for deep learning.
description:    Tensile is a lightweight neural network API that uses backpack to integrate with common deep learning frameworks such as TensorFlow, Torch, or ONNX.
category:       Machine Learning
homepage:       https://github.com/cmk/tensile#readme
bug-reports:    https://github.com/cmk/tensile/issues
maintainer:     Chris McKinlay
license:        BSD3
build-type:     Simple
cabal-version:  >= 2.0

source-repository head
  type: git
  location: https://github.com/cmk/tensile

library 
    hs-source-dirs: 
        lib/src
    exposed-modules:
        Numeric.Tensile.Tensor
        Numeric.Tensile.Operations.Linear.Unlifted
        Numeric.Tensile.Operations.Manipulation.Unlifted
    build-depends:
        base == 4.*,
        backprop,
        signatures,
        tensile-types,
        vector
    default-extensions: 
        ConstraintKinds, 
        DataKinds,
        FlexibleContexts,
        PolyKinds,
        RankNTypes,
        ScopedTypeVariables,
        TypeApplications,
        TypeFamilies,
        TypeOperators 
    default-language: Haskell2010

library tensile-test
    hs-source-dirs: 
        lib/test
    exposed-modules:
        Test.Numeric.Tensile.Tensor.Gen
        Test.Numeric.Tensile.Operations.Linear.Predicate
    signatures:
        Test.Numeric.Tensile.Tensor.Gen.Internal
    build-depends:
        base == 4.*,
        hedgehog,
        tensile,
        tensile-types,
        vector
    default-extensions: 
        DataKinds,
        RankNTypes,
        ScopedTypeVariables,
        TypeApplications,
        TypeOperators,
        OverloadedLists
    default-language: Haskell2010

library tensile-types 
    hs-source-dirs: 
        types/src
    exposed-modules:
        Numeric.Tensile.Index
        Numeric.Tensile.Permutation
        Numeric.Tensile.Types
    build-depends:
        base == 4.*,
        combinat,
        dimensions,
        singletons
    default-extensions: 
        ConstraintKinds, 
        DataKinds,
        FlexibleContexts,
        PolyKinds,
        RankNTypes,
        ScopedTypeVariables,
        TypeApplications,
        TypeFamilies,
        TypeOperators 
    default-language: Haskell2010

library signatures
    hs-source-dirs: 
        sig
    signatures:
        Numeric.Tensile.Tensor.Internal
        Numeric.Tensile.Operations.Linear.Internal
        Numeric.Tensile.Operations.Quantization.Internal
    build-depends:
        base == 4.*,
        tensile-types,
        vector
    default-extensions: 
        ConstraintKinds, 
        DataKinds,
        FlexibleContexts,
        PolyKinds,
        RankNTypes,
        ScopedTypeVariables,
        TypeApplications,
        TypeFamilies,
        TypeOperators 
    default-language: Haskell2010

library local-signatures
    hs-source-dirs: 
        local
    build-depends:
        base == 4.*,
        signatures
    default-language: Haskell2010

library reference
    hs-source-dirs: 
        ref/src
    exposed-modules:
        Numeric.Tensile.Tensor.Internal
        Numeric.Tensile.Operations.Linear.Internal     
        Numeric.Tensile.Operations.Quantization.Internal
    build-depends:
        base == 4.*,
        dimensions,
        tensile-types,
        vector
    default-extensions: 
        ConstraintKinds, 
        DataKinds,
        FlexibleContexts,
        PolyKinds,
        RankNTypes,
        ScopedTypeVariables,
        TypeApplications,
        TypeFamilies,
        TypeOperators 
    default-language: Haskell2010

library reference-test
    hs-source-dirs: 
        ref/test
    exposed-modules:
        Test.Numeric.Tensile.Tensor.Gen.Internal    
    build-depends:
        base == 4.*,
        hedgehog,
        reference,
        tensile-types,
        vector
    default-extensions: 
        DataKinds,
        ScopedTypeVariables,
        TypeApplications,
        TypeOperators,
        OverloadedLists
    default-language: Haskell2010

test-suite test
    type:                
        exitcode-stdio-1.0
    hs-source-dirs: 
        test
    main-is:            
        test.hs
    other-modules:
        Test.Numeric.Tensile.Operations.Linear.Property
    build-depends:       
        base == 4.*,
        hedgehog,
        reference,
        tensile,
        tensile-types,
        tensile-test,
        reference,
        reference-test
    default-extensions:
        DataKinds,
        ScopedTypeVariables,
        TypeApplications,
        TypeOperators,
        OverloadedLists
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall

executable main
    main-is: 
        main.hs
    build-depends:
        base == 4.*,
        reference,
        tensile,
        tensile-types,
        vector
    default-language: Haskell2010
    default-extensions: 
        DataKinds,
        ScopedTypeVariables,
        TypeOperators,
        OverloadedLists

library old
    hs-source-dirs: 
        ref-old
    exposed-modules:
        Numeric.Tensile.Tensor.Types
        Numeric.Tensile.Tensor.Internal.Array
        Numeric.Tensile.Operations.Linear.Internal     
        Numeric.Tensile.Operations.Quantization.Internal
    build-depends:
        base == 4.*,
        dimensions,
        singletons,
        vector
    default-extensions: 
        ConstraintKinds, 
        DataKinds,
        FlexibleContexts,
        ScopedTypeVariables,
        TypeApplications,
        TypeFamilies,
        TypeOperators 
    default-language: Haskell2010
