name:           tensile
version:        0.0.1
synopsis:       A cross-platform library for deep learning.
description:    Tensile is a lightweight neural network API that uses backpack for ML framework integration.
category:       Machine Learning
homepage:       https://github.com/cmk/tensile#readme
bug-reports:    https://github.com/cmk/tensile/issues
maintainer:     Chris McKinlay
license:        BSD3
build-type:     Simple
cabal-version:  >= 2.0

source-repository head
  type: git
  location: https://github.com/cmk/tensile

library 
    hs-source-dirs: 
        lib/src
    exposed-modules:
        Numeric.Tensile.Tensor
        Numeric.Tensile.Operations.Linear.Unlifted
    build-depends:
        base == 4.*,
        backprop,
        tensile-signatures == 0.0.*,
        tensile-dimensions == 0.0.*,
        vector,
        vector-sized
    default-extensions: 
        ConstraintKinds, 
        FlexibleContexts,
        RankNTypes,
        ScopedTypeVariables,
        TypeInType,
        TypeApplications,
        TypeFamilies,
        TypeOperators 
    default-language: Haskell2010

library tensile-test
    hs-source-dirs: 
        lib/test
    exposed-modules:
        Test.Numeric.Tensile.Dimensions.Gen
        Test.Numeric.Tensile.Dimensions.Index.Predicate
        Test.Numeric.Tensile.Tensor.Gen
        Test.Numeric.Tensile.Operations.Linear.Predicate
    signatures:
        Test.Numeric.Tensile.Tensor.Gen.Internal
    build-depends:
        base == 4.*,
        hedgehog,
        tensile,
        tensile-dimensions == 0.0.*,
        vector
    default-extensions: 
        RankNTypes,
        ScopedTypeVariables,
        TypeInType,
        TypeApplications,
        TypeOperators,
        OverloadedLists
    default-language: Haskell2010

library local-signatures
    hs-source-dirs: 
        local
    build-depends:
        base == 4.*,
        tensile-signatures == 0.0.*
    default-language: Haskell2010

library reference
    hs-source-dirs: 
        ref/src
    exposed-modules:
        Numeric.Tensile.Tensor.Internal
        Numeric.Tensile.Operations.Linear.Internal     
        Numeric.Tensile.Operations.Quantization.Internal
    build-depends:
        base == 4.*,
        finite-typelits,
        tensile-dimensions == 0.0.*,
        vector,
        vector-sized
    default-extensions:
        AllowAmbiguousTypes,
        ConstraintKinds, 
        FlexibleContexts,
        RankNTypes,
        ScopedTypeVariables,
        TypeInType,
        TypeApplications,
        TypeFamilies,
        TypeOperators 
    default-language: Haskell2010

library reference-test
    hs-source-dirs: 
        ref/test
    exposed-modules:
        Test.Numeric.Tensile.Tensor.Gen.Internal    
    build-depends:
        base == 4.*,
        hedgehog,
        reference,
        tensile-dimensions == 0.0.*,
        vector
    default-extensions: 
        ScopedTypeVariables,
        TypeApplications,
        TypeInType,
        TypeOperators,
        OverloadedLists
    default-language: Haskell2010

test-suite test
    type:                
        exitcode-stdio-1.0
    hs-source-dirs: 
        test
    main-is:            
        test.hs
    other-modules:
        Test.Numeric.Tensile.Dimensions.Index.Property 
        Test.Numeric.Tensile.Operations.Linear.Property
    build-depends:       
        base == 4.*,
        hedgehog,
        tensile,
        tensile-dimensions == 0.0.*,
        tensile-test,
        reference,
        reference-test
    default-extensions:
        ScopedTypeVariables,
        TypeApplications,
        TypeInType,
        TypeOperators,
        OverloadedLists
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall

executable main
    main-is: 
        main.hs
    build-depends:
        base == 4.*,
        reference,
        tensile,
        tensile-dimensions == 0.0.*,
        vector
    default-language: Haskell2010
    default-extensions: 
        ScopedTypeVariables,
        TypeOperators,
        TypeInType,
        OverloadedLists
