name:           tensile
version:        0.0.1
synopsis:       A cross-platform library for deep learning.
description:    Tensile is a lightweight neural network API that uses backpack to integrate with common deep learning frameworks such as TensorFlow, Torch, or ONNX.
category:       Machine Learning
homepage:       https://github.com/cmk/tensile#readme
bug-reports:    https://github.com/cmk/tensile/issues
maintainer:     Chris McKinlay
license:        BSD-3-Clause
build-type:     Simple
cabal-version:  >= 2.0

source-repository head
  type: git
  location: https://github.com/cmk/tensile

library
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
  hs-source-dirs:
      lib
  signatures:
      Data.Tensor.Internal.Types
  exposed-modules:
      Data.Tensor
  build-depends:
      base >= 4.9 && < 5
    , backprop
    , dimensions
    , singletons
    , tensile-signatures
    , vector
  mixins:
      tensile-signatures requires (Data.Tensor.Types as Data.Tensor.Internal.Types)
  default-language: Haskell2010
  default-extensions: ConstraintKinds DataKinds FlexibleContexts TypeApplications TypeFamilies ScopedTypeVariables
